--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Lorem ipsum dolor sit amet</title>
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-  <link rel="stylesheet" type="text/css" href="layout1.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
   <header>
