--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Lorem ipsum dolor sit amet</title>
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
   <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="stylesheet" type="text/css" href="layout1.css">
 </head>
 <body>
   <header>
