--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     </ol>
   </nav>
   <main>
+   <div class="content">
     <article id="one">
       <h2>Duis aute irure dolor in reprehenderit in voluptate</h2>
       <nav id="nav-one" class="navigation">
@@ -96,6 +97,7 @@
         </p>
       </section>
     </article>
+    </div>
   </main>
 </body>
 </html>
